tests/baselines/reference/indexWithoutParamType2.errors.txt
indexWithoutParamType2.ts(3,6): error TS2304: Cannot find name 'x'.


==== indexWithoutParamType2.ts (1 errors) ====
    class C {
        // Used to be indexer, now it is a computed property
        [x]: string
         ~
!!! error TS2304: Cannot find name 'x'.
    }